--- a/Front/html/libraly/libraly.css
+++ b/Front/html/libraly/libraly.css
@@ -104,104 +104,174 @@ html, body{
 }
 
 
-ul{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-  display:flex;
-  font-family: sans-serif;
-}
-ul li{
-  list-style:none;
-  margin:0 5px;
+
+#plan{
+  width:945px;
+  height:200px;
+  background-color:#f6f6f6;
+  background: -webkit-linear-gradient(left, #efefef, #e6e6e6);
+background: -moz-linear-gradient(left, #efefef, #e6e6e6);
+background: -ms-linear-gradient(left, #efefef, #e6e6e6);
+background: -o-linear-gradient(left, #efefef, #e6e6e6);
+  margin: 0 auto;
+margin-top: 30px;
+  
+  
+  
 }
 
-ul li a span{
-  position:absolute;
-  top: 30px;
-  color: #262626;
-  letter-spacing: 4px;
-  transition: .5s;
+.title{
+  width:200px;
+  height:200px;
+  background-color: #a3a3a3;
+  float:left;
+   -webkit-transition: background-color 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+    -moz-transition:background-color width 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+    -o-transition: background-color width 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+    transition: background-color width 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+  
 }
-ul li a{
-  text-decoration: none;
-  display:block;
-  width:210px;
-  height:80px;
-  background: #fff;
-  text-align:left;
-  padding-left: 20px;
-  transform: rotate(-30deg) skew(25deg) translate(0,0);
-  transition:.5s;
-  box-shadow: -20px 20px 10px rgba(0,0,0,.5);
+
+.title h1{
+  
+  color:white;
+  font-family:'Open Sans';
+  text-transform:uppercase;
+  font-size:30px;
+  font-weight: 100;
+  text-align:center;
+  margin:0px;
+  padding:0px;
+  padding-top:35px;
 }
-ul li a:before{
-  content: '';
-  position: absolute;
-  top:10px;
-  left:-20px;
-  height:100%;
-  width:20px;
-  background: #b1b1b1;
-  transform: .5s;
-  transform: rotate(0deg) skewY(-45deg);
+
+.title h1 span{
+  font-size:10px;
 }
-ul li a:after{
-  content: '';
-  position: absolute;
-  bottom:-20px;
-  left:-10px;
-  height:20px;
-  width:100%;
-  background: #b1b1b1;
-  transform: .5s;
-  transform: rotate(0deg) skewX(-45deg);
+
+.title p{
+  color:white;
+  font-family:'Open Sans';
+  text-transform:uppercase;
+  font-size:40px;
+  font-weight:bold;
+  text-align:center;
+  margin:0px;
+  padding:0px;
+  
 }
-ul li a:hover{
-  transform: rotate(-30deg) skew(25deg) translate(20px,-15px);
-}
-ul li:hover .fa{
-  color:#fff;
-}
-ul li:hover span{
-  color:#fff;
-}
-ul li:hover:nth-child(1) a{
-  background: #3b5998;
-}
-ul li:hover:nth-child(1) a:before{
-  background: #365492;
-}
-ul li:hover:nth-child(1) a:after{
-  background: #4a69ad;
-}
-ul li:hover:nth-child(2) a{
-  background: #00aced;
-}
-ul li:hover:nth-child(2) a:before{
-  background: #097aa5;
-}
-ul li:hover:nth-child(2) a:after{
-  background: #53b9e0;
-}
-ul li:hover:nth-child(3) a{
-  background: #dd4b39;
-}
-ul li:hover:nth-child(3) a:before{
-  background: #b33a2b;
-}
-ul li:hover:nth-child(3) a:after{
-  background: #e66a5a;
-}
-ul li:hover:nth-child(4) a{
-  background: #e4405f;
-}
-ul li:hover:nth-child(4) a:before{
-  background: #d81c3f;
-}
-ul li:hover:nth-child(4) a:after{
-  background: #e46880;
+
+.title:hover{
+  background-color:#d63240;
+  width:230px;
+  -webkit-transition: background-color 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+    -moz-transition:background-color width 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+    -o-transition: background-color width 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
+    transition: background-color width 0.3s ease-out 0.3s, width 0.3s ease-out 0.3s;
 }
 
 
+.containDetails{
+  max-width: 640px;
+  float:left;
+  margin-top: 29px;
+  padding-left: 46px;
+}
+
+.details li{
+  display:inline-block;
+  margin:0px;
+  padding:0px;
+  font-size: 30px;
+  color: #6a6a6a;
+  font-family:'Open Sans';
+  font-weight:bold;
+  text-align: center;
+  padding-left: 48px;
+}
+
+.first{
+  padding:0px!important;
+}
+
+.details{
+  padding:0px;
+  float:left;
+}
+.details li span{
+  font-size:15px;
+  text-transform:uppercase;
+}
+
+.details li span:before{
+ content: '\a' ; 
+ white-space: pre;  
+}
+
+.select{
+  margin-top: 73px;
+  margin-left: 14px;
+}
+.end{
+  width: 150px;
+  height: 200px;
+  background-color: #efefef;  
+  float: left;
+  position: relative;
+  left: 64px;
+ 
+}
+
+.button-pill {
+-webkit-border-radius: 50px;
+-moz-border-radius: 50px;
+-ms-border-radius: 50px;
+-o-border-radius: 50px;
+border-radius: 50px;
+}
+
+.button {
+-webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.15);
+-moz-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.15);
+box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.5), 0px 1px 2px rgba(0, 0, 0, 0.15);
+background-color: #eeeeee;
+background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #fbfbfb), color-stop(100%, #e1e1e1));
+background: -webkit-linear-gradient(top, #fbfbfb, #e1e1e1);
+background: -moz-linear-gradient(top, #fbfbfb, #e1e1e1);
+background: -o-linear-gradient(top, #fbfbfb, #e1e1e1);
+background: linear-gradient(top, #fbfbfb, #e1e1e1);
+display: -moz-inline-stack;
+display: inline-block;
+vertical-align: middle;
+zoom: 1;
+border: 1px solid #d4d4d4;
+height: 32px;
+line-height: 32px;
+padding: 0px 25.6px;
+font-weight: 300;
+font-size: 14px;
+font-family:'Open Sans';
+color: #666666;
+text-shadow: 0 1px 1px white;
+margin: 0;
+text-decoration: none;
+text-align: center;
+}
+
+.button-flat-royal {
+-webkit-box-shadow: none;
+-moz-box-shadow: none;
+box-shadow: none;
+-webkit-transition-property: background;
+-moz-transition-property: background;
+-o-transition-property: background;
+transition-property: background;
+-webkit-transition-duration: 0.3s;
+-moz-transition-duration: 0.3s;
+-o-transition-duration: 0.3s;
+transition-duration: 0.3s;
+background: #d63240;
+color: white;
+text-shadow: none;
+border: none;
+}
