--- a/Front/html/shop/shop.css
+++ b/Front/html/shop/shop.css
@@ -103,105 +103,102 @@ html, body{
   left: 100%;
 }
 
-
-ul{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%, -50%);
-  display:flex;
-  font-family: sans-serif;
-}
-ul li{
-  list-style:none;
-  margin:0 5px;
+h1 {
+  font-size:3em; 
+  font-weight: 300;
+  line-height:1em;
+  text-align: center;
+  color: #4DC3FA;
 }
 
-ul li a span{
-  position:absolute;
-  top: 30px;
-  color: #262626;
-  letter-spacing: 4px;
-  transition: .5s;
+h2 {
+  font-size:1em; 
+  font-weight: 300;
+  text-align: center;
+  display: block;
+  line-height:1em;
+  padding-bottom: 2em;
+  color: #FB667A;
 }
-ul li a{
+
+h2 a {
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #FB667A;
   text-decoration: none;
-  display:block;
-  width:210px;
-  height:80px;
-  background: #fff;
-  text-align:left;
-  padding-left: 20px;
-  transform: rotate(-30deg) skew(25deg) translate(0,0);
-  transition:.5s;
-  box-shadow: -20px 20px 10px rgba(0,0,0,.5);
-}
-ul li a:before{
-  content: '';
-  position: absolute;
-  top:10px;
-  left:-20px;
-  height:100%;
-  width:20px;
-  background: #b1b1b1;
-  transform: .5s;
-  transform: rotate(0deg) skewY(-45deg);
-}
-ul li a:after{
-  content: '';
-  position: absolute;
-  bottom:-20px;
-  left:-10px;
-  height:20px;
-  width:100%;
-  background: #b1b1b1;
-  transform: .5s;
-  transform: rotate(0deg) skewX(-45deg);
-}
-ul li a:hover{
-  transform: rotate(-30deg) skew(25deg) translate(20px,-15px);
-}
-ul li:hover .fa{
-  color:#fff;
-}
-ul li:hover span{
-  color:#fff;
-}
-ul li:hover:nth-child(1) a{
-  background: #3b5998;
-}
-ul li:hover:nth-child(1) a:before{
-  background: #365492;
-}
-ul li:hover:nth-child(1) a:after{
-  background: #4a69ad;
-}
-ul li:hover:nth-child(2) a{
-  background: #00aced;
-}
-ul li:hover:nth-child(2) a:before{
-  background: #097aa5;
-}
-ul li:hover:nth-child(2) a:after{
-  background: #53b9e0;
-}
-ul li:hover:nth-child(3) a{
-  background: #dd4b39;
-}
-ul li:hover:nth-child(3) a:before{
-  background: #b33a2b;
-}
-ul li:hover:nth-child(3) a:after{
-  background: #e66a5a;
-}
-ul li:hover:nth-child(4) a{
-  background: #e4405f;
-}
-ul li:hover:nth-child(4) a:before{
-  background: #d81c3f;
-}
-ul li:hover:nth-child(4) a:after{
-  background: #e46880;
 }
 
+.blue { color: #185875; }
+.yellow { color: #FFF842; }
 
+.container th h1 {
+    font-weight: bold;
+    font-size: 1em;
+  text-align: left;
+  color: #185875;
+}
+
+.container td {
+    font-weight: normal;
+    font-size: 1em;
+  -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+     -moz-box-shadow: 0 2px 2px -2px #0E1119;
+          box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.container {
+    text-align: left;
+    overflow: hidden;
+    width: 100%;
+    margin: 0 auto;
+  display: table;
+  padding: 0 0 8em 0;
+}
+
+.container td, .container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+  padding-left:2%;  
+}
+
+/* Background-color of the odd rows */
+.container tr:nth-child(odd) {
+    background-color: #323C50;
+}
+
+/* Background-color of the even rows */
+.container tr:nth-child(even) {
+    background-color: #2C3446;
+}
+
+.container th {
+    background-color: #1F2739;
+}
+
+.container td:first-child { color: #FB667A; }
+
+.container tr:hover {
+   background-color: #464A52;
+-webkit-box-shadow: 0 6px 6px -6px #0E1119;
+     -moz-box-shadow: 0 6px 6px -6px #0E1119;
+          box-shadow: 0 6px 6px -6px #0E1119;
+}
+
+.container td:hover {
+  background-color: #FFF842;
+  color: #403E10;
+  font-weight: bold;
+  
+  box-shadow: #7F7C21 -1px 1px, #7F7C21 -2px 2px, #7F7C21 -3px 3px, #7F7C21 -4px 4px, #7F7C21 -5px 5px, #7F7C21 -6px 6px;
+  transform: translate3d(6px, -6px, 0);
+  
+  transition-delay: 0s;
+    transition-duration: 0.4s;
+    transition-property: all;
+  transition-timing-function: line;
+}
+
+@media (max-width: 800px) {
+.container td:nth-child(4),
+.container th:nth-child(4) { display: none; }
+}
